--- a/src/css/tutor/tutor-contact.css
+++ b/src/css/tutor/tutor-contact.css
@@ -2,9 +2,9 @@
     background-color: #f8f9fa;
     min-height: 100vh;
     padding: 2rem 0;
-    background-image: url('/public/Images/Aboutus/herobg.png');
+    background-image: url('/public/Images/site-images/com/site-top-new.png');
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-size: 100% ;
 }
 
 .tutor-contact-card {
