--- a/src/css/tutor/tutor-top.css
+++ b/src/css/tutor/tutor-top.css
@@ -114,6 +114,7 @@
     cursor: pointer;
     border-radius: .75rem;
     transition: background-color 0.2s;
+    text-decoration: none;
 }
 
 .tutor-top-contact:hover {
