--- a/src/css/ucat/ucat-hdiw.css
+++ b/src/css/ucat/ucat-hdiw.css
@@ -35,11 +35,67 @@
     text-shadow: 2px 2px 4px rgba(244, 67, 54, 0.1);
 }
 
+.ucat-hdiw-steps {
+    position: relative;
+    padding: 2rem 0;
+}
+
+.ucat-hdiw-step {
+    display: flex;
+    align-items: flex-start;
+    position: relative;
+    padding-bottom: 3rem;
+}
+
+.ucat-hdiw-step:last-child {
+    padding-bottom: 0;
+}
+
+/* Vertical line connector */
+.ucat-hdiw-step:not(:last-child)::after {
+    content: '';
+    position: absolute;
+    left: 25px;
+    top: 60px;
+    bottom: 0;
+    width: 2px;
+    background-color: #e0e0e0;
+}
+
+.ucat-hdiw-step-number {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 2px solid #f44336;
+    color: #f44336;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-right: 1.5rem;
+    flex-shrink: 0;
+    position: relative;
+    z-index: 1;
+}
+
+.ucat-hdiw-step-content {
+    flex-grow: 1;
+    padding-top: 0.5rem;
+}
+
+.ucat-hdiw-step-title {
+    color: #16205b;
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+
 .ucat-hdiw-step-text {
-    font-size: 1.125rem;
-    line-height: 1.7;
-    color: #333;
-    text-align: center;
+    color: #666;
+    font-size: 1rem;
+    line-height: 1.5;
+    margin: 0;
 }
 
 .ucat-hdiw-link {
@@ -200,6 +256,55 @@
     
     .ucat-hdiw-confirmation-text {
         font-size: 1.125rem;
+    }
+
+    .ucat-hdiw-steps {
+        padding: 1rem 0;
+    }
+
+    .ucat-hdiw-step {
+        padding-bottom: 2rem;
+    }
+
+    .ucat-hdiw-step-number {
+        width: 40px;
+        height: 40px;
+        font-size: 1.25rem;
+        margin-right: 1rem;
+    }
+
+    .ucat-hdiw-step:not(:last-child)::after {
+        left: 20px;
+        top: 50px;
+    }
+
+    .ucat-hdiw-step-title {
+        font-size: 1.1rem;
+    }
+
+    .ucat-hdiw-step-text {
+        font-size: 0.95rem;
+    }
+}
+
+@media (max-width: 576px) {
+    .ucat-hdiw-step-number {
+        width: 35px;
+        height: 35px;
+        font-size: 1.1rem;
+    }
+
+    .ucat-hdiw-step:not(:last-child)::after {
+        left: 17px;
+        top: 45px;
+    }
+
+    .ucat-hdiw-step-title {
+        font-size: 1rem;
+    }
+
+    .ucat-hdiw-step-text {
+        font-size: 0.9rem;
     }
 }
 
