tutor dashboard documents page done

--- a/src/css/dashboards/tutor/snippets/navbar.css
+++ b/src/css/dashboards/tutor/snippets/navbar.css
@@ -1,6 +1,6 @@
 /* Main container */
 .tutor-navbar-main {
-    width: 15dvw;
+    width: 250px;
     height: 100vh;
     background-color: #e0e0e0;
     border-right: 1px solid #e0e0e0;
@@ -13,7 +13,7 @@
 }
 
 .tutor-navbar-main.collapsed {
-    width: 5dvw;
+    width: 90px
 }
 
 /* Profile section */
